# cognix

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  INSTALL_JA.md  LICENSE  README.md  README_JA.md  build.py  descriptions.md  pyproject.toml  release_notes_v0_1_3.md  release_notes_v0_1_4.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
benchmark/: README.md
benchmark/phase1/: README.md  prompt.md  verify.py
benchmark/phase1/base/: cli.py  commands.py  formatters.py  models.py  plugins.py  storage.py  test_taskmanager.py  validators.py
benchmark/phase1/results/: phase1_full_20260218_205351_clean.json
benchmark/phase1/results/aider/run1/: cli.py  commands.py  formatters.py  models.py  storage.py  test_taskmanager.py  validators.py
benchmark/phase1/results/aider/run2/: cli.py  commands.py  filters.py  formatters.py  models.py  test_taskmanager.py  validators.py
benchmark/phase1/results/aider/run3/: cli.py  commands.py  formatters.py  models.py  storage.py  test_taskmanager.py  validators.py
benchmark/phase1/results/claude_code/run1/: cli.py  commands.py  exporters.py  formatters.py  models.py  storage.py  test_taskmanager.py  validators.py
benchmark/phase1/results/claude_code/run2/: cli.py  commands.py  formatters.py  models.py  plugins.py  storage.py  test_taskmanager.py  validators.py
benchmark/phase1/results/claude_code/run3/: cli.py  commands.py  formatters.py  models.py  storage.py  test_taskmanager.py  validators.py
benchmark/phase1/results/cognix/run1/: cli.py  commands.py  exporters.py  formatters.py  models.py  storage.py  test_taskmanager.py  validators.py
cognix/: __init__.py  apply_spinner_animation.py  cli.py  cli_chat_workflow.py  cli_file_operations.py  cli_main.py  cli_repository.py  cli_shared.py  cli_utilities.py  cognix_data_layout_spec.md  complexity_analyzer.py  config.py  context.py  dependency_checker.py  diff_viewer.py  enhanced_memory.py  file_detection.py  hud_components.py  impact_analyzer.py  linter_integration.py  llm.py  logger.py  main.py  mcp_server.py  memory.py  progress.py  progress_zen.py  prompt_templates.py  reference_parser.py  related_finder.py  repository_analyzer.py  repository_manager.py  requirement_validator.py  review_details_ui.py  run.py  safe_editor.py  semi_auto_engine.py  session.py  stylecode_extractor.py  theme_zen.py  (+3 more)
cognix.egg-info/: PKG-INFO
cognix/data/: .env.example  sample_spec_tetris.md
cognix/data/templates/: ui-knowledge.json.template
cognix/data/templates/knowledge/: app_patterns.json.template
cognix/data/templates/rules/: default_file_reference_rules.md.template
docs/: index.html  ja.html
src/cognix/: __init__.py  setup.py
(+16 files in other folders)
