[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognix"
version = "0.2.1"
description = "AI-powered CLI development assistant"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Cognix" }
]
maintainers = [
    { name = "Cognix" }
]
dependencies = [
    # Core AI providers
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    # Core utilities
    "pydantic>=1.10.0",  # indirect dependency via anthropic SDK
    "rich>=13.0.0",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    "typing-extensions>=4.7.0",
    # Testing (included for quality assurance)
    "pytest>=7.0.0",
    # MCP support
    "mcp>=1.0.0",
    # LINTING - Included by default for perfect first experience
    "ruff>=0.1.0",
]
keywords = [
    "ai",
    "cli",
    "code-generation",
    "llm",
    "developer-tools",
    "autonomous-coding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://cognix-dev.github.io/cognix/"
Repository = "https://github.com/cognix-dev/cognix"
Issues = "https://github.com/cognix-dev/cognix/issues"
Changelog = "https://github.com/cognix-dev/cognix/blob/main/CHANGELOG.md"
Documentation = "https://github.com/cognix-dev/cognix/blob/main/README.md"

[project.scripts]
cognix = "cognix.main:main"
cognix-cli = "cognix.main:main"
cognix-mcp = "cognix.mcp_server:main"

[tool.setuptools]
packages = ["cognix"]
include-package-data = true

[tool.setuptools.package-data]
"cognix" = [
    "*.txt",
    "*.md",
    "*.json",
    "data/.env.example",
    "data/templates/*.template",
    "data/templates/*.md",
    "data/templates/**/*.template",
]

[project.optional-dependencies]
lint-python = [
    "flake8>=6.1.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",
]
lint-all = [
    "cognix[lint-python]",
]

# Linter settings
[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "I", "N"]
ignore = ["E203"]

[tool.pylint.messages_control]
max-line-length = 120
disable = ["C0111", "C0103"]
